2002-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile: Bugfix: Use actual fontname (.AFM FontName) for
	lilypond.map.  Include sauter fonts too.  Cleanups.

2002-11-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely (First steps): change to new
	chord/tie/slur/beam notation.

	* lily/parser.yy (event_that_take_dir): allow postfix notation for
	ties.

	* lily/new-tie-engraver.cc (process_acknowledged_grobs): new
	engraver. Process ties in postfix notation, i.e. c8-~ c

	* lilypond-mode.el (LilyPond-command-alist): run LaTeX by default.

	* input/regression/beam-postfix-notation.ly (texidoc): new file.

	* lily/parser.yy (event_that_take_dir): allows c8-[ for beams.

	* lily/beam-engraver.cc (try_music): accept new-beam-events

	* input/regression/chord-scripts.ly (texidoc): new file

	* lily/new-fingering-engraver.cc (acknowledge_grob):  also handle
	script-events.

	* scm/script.scm (default-script-alist): cleanup.

	* lily/script-engraver.cc (make_script_from_event): cleanup.

	* lily/lyric-combine-music-iterator.cc
	(Lyric_combine_music_iterator): remove superfluous events.
	(melisma_busy): new function. Fix broken melismas.

2002-10-31  Heikki Junes  <hjunes@cc.hut.fi>

	* vimrc: Add shortcuts for compiling, midi-playing and PS-viewing.
	Remove nonvalid settings. Use descriptive key names.
	Use <Return> to indicate the pressing of that key.

2002-10-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (option_definitions): Typo.

	* scripts/ly2dvi.py: Updates.

	* python/lilylib.py (setup_environment, print_environment)
	(get_bbox, make_preview): Merge and remove from ly2dvi and
	lilypond-book.

	* scripts/lilypond-book.py: Use lilylib.  Cleanups.

	* .cvsignore: Remove some cruft.

	* make/lilypond-vars.make (PYTHONPATH): Add python's outdir to
	path.

	* scripts/ly2dvi.py: Use lilylib as module.  Fail gracefully if
	kpsexpand, kpsewhich, ps2pdf exit with error.  Cleanups and fixes
	throughout.
