@@ -1,3 +1,9 @@
+2002-11-03  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* scripts/convert-ly.py: more uniformization substitutions.
+
+	* buildscripts/new-chords.py (sub_chords): new file.
+
 2002-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* mf/GNUmakefile: Bugfix: Use actual fontname (.AFM FontName) for
